- changed the scopes an removed unused files